--- a/luahelper-vscode/package.json
+++ b/luahelper-vscode/package.json
@@ -111,97 +111,97 @@
                         "properties": {
                             "program": {
                                 "type": "string",
-                                "description": "Path to executable file which launched with debugger(not a lua file), default \"\". \n随调试器启动的可执行文件路径(非lua文件), 如无可以填\"\"。",
+                                "description": "Path to executable file which launched with debugger(not a lua file), default \"\". ",
                                 "default": ""
                             },
                             "args": {
                                 "type": "array",
-                                "description": "Program execution parameters, the structure is an array of strings. \nprogram 执行时需要的参数, 结构是一个字符串数组。",
+                                "description": "Program execution parameters, the structure is an array of strings. ",
                                 "default": []
                             },
                             "stopOnEntry": {
                                 "type": "boolean",
-                                "description": "After the debugger connect, it automatically stops at the first line of code called. \n调试器启动后自动停止在调用的第一行代码处。",
+                                "description": "After the debugger connect, it automatically stops at the first line of code called. ",
                                 "default": true
                             },
                             "cwd": {
                                 "type": "string",
-                                "description": "exactltPathMode : 拼接路径 | autoPathMode : workspace 路径。",
+                                "description": "exactltPathMode : splicing path | autoPathMode : workspace path.",
                                 "default": "${workspaceFolder}"
                             },
                             "isNeedB64EncodeStr": {
                                 "type": "boolean",
-                                "description": "Whether use base64 encoding for transmit strings. default true. \n是否使用base64编码传输字符串，默认请开启。",
+                                "description": "Whether use base64 encoding for transmit strings. default true. ",
                                 "default": true
                             },
                             "luaFileExtension": {
                                 "type": "string",
-                                "description": "Lua file suffix. \nLua文件后缀。",
+                                "description": "Lua file suffix. \n",
                                 "default": ""
                             },
                             "pathCaseSensitivity": {
                                 "type": "boolean",
-                                "description": "File path is case sensitive, default true. \n文件路径大小写敏感, 默认true。",
+                                "description": "File path is case sensitive, default true. ",
                                 "default": true
                             },
                             "connectionPort": {
                                 "type": "number",
-                                "description": "The port number of the connection. Default is 8818. \n设置连接的端口号，默认8818。",
+                                "description": "The port number of the connection. Default is 8818. ",
                                 "default": 8818
                             },
                             "autoReconnect": {
                                 "type": "boolean",
-                                "description": "When disconnected by the lua end, VSCode automatically waits for new reconnection. \n当被lua端断开连接时，VSCode自动等待重连。",
+                                "description": "When disconnected by the lua end, VSCode automatically waits for new reconnection. ",
                                 "default": true
                             },
                             "rootFolder": {
                                 "type": "string",
-                                "description": "记录vscode打开的目录，可以利用它找到 launch.json",
+                                "description": "Record the directory opened by vscode, you can use it to find launch.json",
                                 "default": "${workspaceFolder}"
                             },
                             "TempFilePath": {
                                 "type": "string",
-                                "description": "Temporary file storage path generated during debugging, please ensure this folder exists. \n调试产生的临时文件存放路径，请确保文件夹存在。",
+                                "description": "Temporary file storage path generated during debugging, please ensure this folder exists.",
                                 "default": "${workspaceFolder}"
                             },
                             "logLevel": {
                                 "type": "number",
-                                "description": "Log level. 0: All information(for developer); 1: Only necessary information (default); 2: Only error. \n日志等级. 0:all所有信息(面向开发者); 1:info仅必要信息(默认); 2:error仅错误。",
+                                "description": "Log level. 0: All information(for developer); 1: Only necessary information (default); 2: Only error.",
                                 "default": 1
                             },
                             "useCHook": {
                                 "type": "boolean",
-                                "description": "Use C Hook module to improve efficiency. The default is true. If set false debug with lua hook. \n使用C Hook模块, 提高运行效率。默认true。设置为false则使用 lua hook 调试。",
+                                "description": "Use C Hook module to improve efficiency. The default is true. If set false debug with lua hook. ",
                                 "default": true
                             },
                             "packagePath": {
                                 "type": "array",
-                                "description": "Path added to package.path at runtime, such as /Script/?.lua. \n运行时加入package.path的路径, 如 /Script/?.lua。",
+                                "description": "Path added to package.path at runtime, such as /Script/?.lua. ",
                                 "default": []
                             },
                             "luaPath": {
                                 "type": "string",
-                                "description": "Lua command path and file name such as C:/lua5.3/lua.exe. \nlua命令的路径和文件名. 如 C:/lua5.3/lua.exe。 ",
+                                "description": "Lua command path and file name such as C:/lua5.3/lua.exe.",
                                 "default": ""
                             },
                             "docPathReplace": {
                                 "type": "array",
-                                "description": "被调试文件和VSCode中加载文件路径不一致时，通过此项设置，完成路径替换。输入格式[\"被替换掉的路径\", \"新路径\"]。",
+                                "description": "When the path of the file being debugged and the file loaded in VSCode are inconsistent, use this setting to complete the path replacement. The input format is [\"replaced path\", \"new path\"].",
                                 "default": []
                             },
                             "autoPathMode": {
                                 "type": "boolean",
-                                "description": "Whether to use automatic path mode. \n是否使用自动路径模式。",
+                                "description": "Whether to use automatic path mode.",
                                 "default": true
                             },
                             "updateTips": {
                                 "type": "boolean",
-                                "description": "Whether open LuaPanda automatic upgrade prompt. \n是否打开 LuaPanda 自动升级提示。",
+                                "description": "Whether open LuaPanda automatic upgrade prompt.",
                                 "default": true
                             },
                             "tag": {
                                 "type": "string",
-                                "description": "Mark run mode, don't modify it. There are three modes: normal, attach, independent_file. \n标记运行方式，请勿修改。 有三种模式 normal , attach , independent_file",
+                                "description": "Mark run mode, don't modify it. There are three modes: normal, attach, independent_file. ",
                                 "default": "normal"
                             },
                             "VSCodeAsClient": {
@@ -236,7 +236,7 @@
                             },
                             "description": {
                                 "type": "string",
-                                "description": "当前模式的描述",
+                                "description": "Description of the current mode",
                                 "default": ""
                             }
                         }
@@ -247,7 +247,7 @@
                         "type": "LuaHelper-Debug",
                         "request": "launch",
                         "name": "LuaHelper-Attach",
-                        "description": "通用模式,通常调试项目请选择此模式",
+                        "description": "Universal mode. Please select this mode for normal debugging projects.",
                         "cwd": "${workspaceFolder}",
                         "luaFileExtension": "",
                         "connectionPort": 8818,
@@ -259,7 +259,7 @@
                         "type": "LuaHelper-Debug",
                         "request": "launch",
                         "name": "LuaHelper-DebugFile",
-                        "description": "独立文件调试模式",
+                        "description": "Standalone file debugging mode",
                         "luaPath": "",
                         "packagePath": [],
                         "luaFileExtension": "",
@@ -276,7 +276,7 @@
                             "type": "LuaHelper-Debug",
                             "request": "launch",
                             "name": "LuaHelper-Attach",
-                            "description": "通用模式,通常调试项目请选择此模式",
+                            "description": "Universal mode. Please select this mode for normal debugging projects.",
                             "cwd": "^\"${workspaceFolder}\"",
                             "luaFileExtension": "",
                             "connectionPort": 8818,
@@ -292,7 +292,7 @@
                             "type": "LuaHelper-Debug",
                             "request": "launch",
                             "name": "LuaHelper-DebugFile",
-                            "description": "独立文件调试模式",
+                            "description": "Standalone file debugging mode",
                             "luaPath": "",
                             "packagePath": [],
                             "luaFileExtension": "",
@@ -328,7 +328,6 @@
                     "default": "#569CD6",
                     "description": "%luahelper.colors.annotatetype%"
                 },
-
                 "luahelper.base.rootdir": {
                     "type": "string",
                     "default": "./",
@@ -413,7 +412,6 @@
                     "type": "boolean",
                     "description": "%luahelper.show.online%"
                 },
-               
                 "luahelper.base.showCostTime": {
                     "default": false,
                     "scope": "resource",
@@ -617,7 +615,7 @@
                     "scope": "resource",
                     "type": "integer",
                     "markdownDescription": "%luahelper.format.line_breaks_after_function_body%"
-                },             
+                },
                 "luahelper.Warn.AllEnable": {
                     "default": true,
                     "scope": "resource",
@@ -778,8 +776,7 @@
         "@types/node": "^13.11.1",
         "@types/vscode": "^1.53.0",
         "filecopy": "^4.0.2",
-        "tslint": "^5.8.0",
-        "typescript": "^4.3.5"
+        "tslint": "^5.8.0"
     },
     "dependencies": {
         "await-notify": "1.0.1",
@@ -787,7 +784,8 @@
         "iconv-lite": "^0.5.0",
         "path-reader": "^1.1.0",
         "smart-buffer": "^4.0.1",
-        "vsce": "^1.95.0",
+        "typescript": "^5.5.3",
+        "vsce": "^2.15.0",
         "vscode-debugadapter": "1.31.0",
         "vscode-debugprotocol": "1.31.0",
         "vscode-languageclient": "^7.1.0-next.4"
